# docs

./: .gitignore  CNAME  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml  trigger-docs-from-core.yml  trigger-docs-from-pier.yml
docs/: CNAME  index.md  portal-plan.md  privacy-policy.md  terms-of-service.md
docs/core/: architecture.md  deployment.md  guide.md  index.md  ingress.md  schema-registry.md  storage.md
docs/development/: contributing.md  guide.md
docs/getting-started/: core-config.md  index.md  installation.md  prerequisites.md  quickstart.md  rancher-desktop.md  rke2.md
docs/harbor/: index.md  ingestion.md  trial-quickstart.md  vs-self-hosted.md
docs/overrides/: main.html
docs/reference/: cli.md  configuration.md  docker-images.md  helm-charts.md  index.md
docs/stylesheets/: extra.css
docs/tutorials/: 01-batch-etl-01-basic-etl.md  01-batch-etl-02-elt-trino.md  01-batch-etl-03-multi-source-consolidation.md  01-batch-etl-04-scd2-historical-tracking.md  01-batch-etl-05-scd1-current-state.md  01-batch-etl-06-batch-aggregations.md  02-streaming-01-kafka-spark-streaming.md  02-streaming-02-spark-continuous-processing.md  02-streaming-03-cdc-postgres-to-iceberg.md  02-streaming-04-multi-stream-join.md  02-streaming-05-stream-enrichment.md  02-streaming-06-windowed-aggregations.md  02-streaming-07-exactly-once-spark.md  02-streaming-08-session-window-analytics.md  03-lambda-01-speed-batch-layers.md  03-lambda-02-kappa-stream-only.md  04-federated-01-operational-analytical.md  (+27 more)
scripts/: sync-docs.py
(+29 files in other folders)
